# vortex

./: Cargo.toml  README.md  dist-workspace.toml  test.txt
.github/workflows/: release.yml
src/: args.rs  error.rs  lib.rs  log.rs  main.rs
src/network/: client.rs  code.rs  mod.rs  packet.rs  phrase.rs  server.rs
wix/: main.wxs
